# ViPTreeGen

./: .gitignore  CHANGELOG.md  LICENSE  README  README.md  ViPTreeGen  ViPTreeGen.rake  environment.yaml  meta.yaml  test.sh  viptreegen  viptreegen.rake
.github/workflows/: test.yml
doc/: engine-benchmark.md  mmseqs-blastn.md  mummer4-nucmer.md  v2.0.0_update.md
rust/: Cargo.toml
rust/src/: main.rs
script/: 01-3.cat_and_rename_split_tblastx.rb  02-1.tblastx_filter.rb  02-2.make_sbed_of_blast.rb  02-3.make_summary_pre.rb  02-5.2D.make_summary_tsv.rb  02-5.make_summary_tsv.rb  03-2.matrix_to_nj.R  duckdb_util.rb  m8_split.rb
testdata/: 1.fasta  1.list  2.fasta  ssDNA.prok.5.fasta  ssDNA.prok.8.fasta  ssDNA.prok.8.long_name.fasta
testdata/benchmark/: README.md
testdata/expected/: ssDNA.prok.8.blastn.dist.matrix  ssDNA.prok.8.blastn.sim.matrix  ssDNA.prok.8.last.dist.matrix  ssDNA.prok.8.last.sim.matrix  ssDNA.prok.8.mmseqs-tblastx.dist.matrix  ssDNA.prok.8.mmseqs-tblastx.sim.matrix  ssDNA.prok.8.tblastx.dist.matrix  ssDNA.prok.8.tblastx.sim.matrix
