[package]
name = "viptreegen-summary-pre"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "Per-node parallel reader of tblastx.out files for ViPTreeGen; replaces the legacy 01-3/02-1/02-2/02-3 Ruby steps"

[dependencies]
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
